dfir_rs/tests/compile-fail/surface_defer_iteration_lazy_outside_loop.rs
fn main() {
    let mut df = dfir_rs::dfir_syntax! {
        source_iter(0..10) -> defer_iteration_lazy() -> null();
    };
    df.run_available_sync();
}
